<resources>
    <string name="app_name">Digital Clock</string>
    <string name="year">Year</string>
    <string name="mounth">Mounth</string>
    <string name="day">Day</string>
    <string name="_8888">8888</string>
    <string name="_88">88</string>
    <string name="_0000">0000</string>
    <string name="_00">00</string>
    <string name="phi">ﬁ</string>
    <string name="dashdash">--</string>
    <string name="doubledot">:</string>
    <string name="setting">Setting</string>
    <string name="title_activity_settings">Settings</string>
</resources>
