<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background"
    android:padding="15dp">

    <LinearLayout
        android:id="@+id/off_light"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/on_light"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:orientation="horizontal"
            android:weightSum="5">

            <TextView
                android:id="@+id/Year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/digital7"
                android:text="@string/_0000"
                android:textColor="@color/colorAccent"
                android:textSize="40sp"
                android:layout_weight="1"
                android:gravity="left"/>

            <TextView
                android:id="@+id/Mounth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/digital7"
                android:text="@string/_00"
                android:textColor="@color/colorAccent"
                android:textSize="40sp"
                android:layout_weight="1"
                android:gravity="left"/>

            <TextView
                android:id="@+id/Day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/digital7"
                android:text="@string/_00"
                android:textColor="@color/colorAccent"
                android:textSize="40sp"
                android:layout_weight="1"
                android:gravity="left"/>

            <LinearLayout
                android:id="@+id/day_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal"
                android:gravity="right"
                tools:ignore="RtlHardcoded">

                <TextView
                    android:id="@+id/Week_Day_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/led_counter"
                    android:text="@string/phi"
                    android:textColor="@color/colorAccent"
                    android:textSize="40sp"/>


                <TextView
                    android:id="@+id/Week_Day_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/led_counter"
                    android:text="@string/phi"
                    android:textColor="@color/colorAccent"
                    android:textSize="40sp" />


                <TextView
                    android:id="@+id/Week_Day_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/led_counter"
                    android:text="@string/phi"
                    android:textColor="@color/colorAccent"
                    android:textSize="40sp"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1.5">

            <TextView
                android:id="@+id/Year_Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/year"
                android:textColor="@color/text"
                android:textSize="15sp"
                android:layout_weight="0.4"/>

            <TextView
                android:id="@+id/Mounth_Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mounth"
                android:textColor="@color/text"
                android:textSize="15sp"
                android:layout_weight="0.1"/>

            <TextView
                android:id="@+id/Day_Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day"
                android:textColor="@color/text"
                android:textSize="15sp"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="6">


            <TextView
                android:id="@+id/AP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dashdash"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/Hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/digital7"
                android:text="@string/_00"
                android:textColor="@color/colorAccent"
                android:textSize="80sp"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/Colon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/digital7"
                android:text="@string/doubledot"
                android:textColor="@color/colorAccent"
                android:textSize="80sp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/Minute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/digital7"
                android:text="@string/_00"
                android:textColor="@color/colorAccent"
                android:textSize="80sp"
                tools:ignore="RtlHardcoded"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/Second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/digital7"
                android:text="@string/_00"
                android:textColor="@color/colorAccent"
                android:textSize="55sp"
                android:layout_weight="2"
                android:gravity="right"
                tools:ignore="RtlHardcoded" />

        </LinearLayout>




    </LinearLayout>

    <Button
        android:id="@+id/CShow"
        android:layout_width="wrap_content"
        android:layout_height="85dp"
        android:background="@android:drawable/ic_lock_idle_alarm"
        android:backgroundTint="@color/clock"
        android:elevation="4dp"
        android:layout_marginTop="330dp"
        tools:targetApi="lollipop"
        tools:ignore="UnusedAttribute"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/Setting_EX"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:background="@mipmap/ic_action_settings"
        android:layout_alignParentEnd="true" />

</RelativeLayout>